<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        app:cardCornerRadius="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/edu_gradient_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ready_for_exams"
                style="@style/text_header_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/are_you_ready_for_exams" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/time_digit_field_margin_horizontal"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/card_time_digits_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/time_background"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/day_ten"
                        style="@style/text_time_digits_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="1" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/card_time_digits_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/time_background"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/day_unit"
                        style="@style/text_time_digits_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="2" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/time_devider" />

                <androidx.cardview.widget.CardView
                    style="@style/card_time_digits_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/time_background"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/hour_ten"
                        style="@style/text_time_digits_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="3" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/card_time_digits_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/time_background"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/hour_unit"
                        style="@style/text_time_digits_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="4" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/time_devider" />

                <androidx.cardview.widget.CardView
                    style="@style/card_time_digits_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/time_background"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/minute_ten"
                        style="@style/text_time_digits_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="5" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/card_time_digits_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:cardBackgroundColor="@color/time_background"
                    app:cardCornerRadius="18dp">

                    <TextView
                        android:id="@+id/minute_unit"
                        style="@style/text_time_digits_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="6" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/time_bottom_horizontal_margin"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_bottom_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/days" />

                <TextView
                    style="@style/text_bottom_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hours" />

                <TextView
                    style="@style/text_bottom_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minutes" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            style="@style/text_bottom_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/homework" />

        <TextView
            style="@style/text_bottom_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/_6_classes_left"
            android:textColor="@color/lesson_logo_background" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/text_bottom_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center|start"
        android:text="@string/homework"
        android:layout_marginHorizontal="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:backgroundTint="@color/background_main">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homework_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

</LinearLayout>